# meeting-protocol-generator

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-tests.yml
